--- a/src/components/SkillsCard/skillscard.css
+++ b/src/components/SkillsCard/skillscard.css
@@ -22,6 +22,10 @@
     margin-top: 8px;
     border-radius: 20px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+    transition: 0.2s;
+}
+.singleSkill:hover{
+   transform: scale(1.05);
 
 }
 .singleSkillText{
